# my-tv

.github/workflows/: main.yml
app/: build.gradle
app/src/main/java/com/lizongying/mytv/: InfoFragment.kt  MainActivity.kt  MainFragment.kt  Utils.kt
app/src/main/java/com/lizongying/mytv/api/: Auth.kt
app/src/main/java/com/lizongying/mytv/models/: TVViewModel.kt
app/src/main/java/com/lizongying/mytv/speedtest/: ChannelHelper.kt  IptvSource.kt  NativeSpeedtestRunner.kt
gradle/: libs.versions.toml
iptv-speedtest/: Cargo.toml
iptv-speedtest/src/: main.rs  task.rs
