[package]
name    = "iptv_speedtest"
version = "3.0.0"
edition = "2021"

# ── 依赖 ──────────────────────────────────────────────────────────
[dependencies]
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
clap         = { version = "4",    features = ["derive", "env"] }
regex        = "1"
url          = "2"
once_cell    = "1"
chrono       = { version = "0.4",  features = ["clock"] }
anyhow       = "1"
futures-util = "0.3"

# 仅服务器模式需要
axum      = { version = "0.7", default-features = false, features = ["tokio", "http1", "json"], optional = true }
chrono-tz = { version = "0.9", optional = true }
cron      = { version = "0.12", optional = true }

# ── Features ──────────────────────────────────────────────────────
[features]
default = ["server"]
server  = ["axum", "chrono-tz", "cron"]
# android: 仅 CLI 模式，去掉服务器依赖，缩小体积
android = []

# ── 构建 profile ──────────────────────────────────────────────────
[profile.release]
strip         = "symbols"
debug         = false
lto           = "thin"
codegen-units = 1

# Android 专用：最小体积
[profile.release-android]
inherits      = "release"
lto           = "fat"
panic         = "abort"
